Routing, komponensek rendezése, dashboard

--- a/src/app/hub/hub.component.html
+++ b/src/app/hub/hub.component.html
@@ -1,1 +1,2 @@
-<p>AZ ELOSZTÓ MŰKÖDIK</p>
+<button class="bg-primary text-white border-0 p-3 rounded text-uppercase font-weight-bold"
+(click)="navigateBackToHomePage()" style="cursor:pointer;">Visszatérés a főoldalra</button>
