--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -1,1 +1,8 @@
-<p>page-not-found works!</p>
+<div class="container-fluid d-flex m-0 p-0 flex-wrap position-relative align-items-center justify-content-center bg-dark text-center" style="min-height:100vh">
+    <div class="error-message">
+        <h1 class="text-danger d-block w-100">404 error</h1>
+        <h2 class="text-white d-block w-100">Az oldal nem található!</h2>
+        <button class="bg-primary text-white border-0 p-3 rounded text-uppercase font-weight-bold"
+        (click)="navigateBackToHomePage()" style="cursor:pointer;">Visszatérés a főoldalra</button>
+    </div>
+</div>
