Játék választás hozzáadása

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -58,7 +58,7 @@
             </div>
             <div class="col-lg-4">
                 <h2>Játékok</h2>
-                <mat-card class="bg-transparent">
+                <mat-card class="bg-success mb-3">
                     <mat-card-header>
                       <mat-card-title>Értékelő-játék</mat-card-title>
                     </mat-card-header>
@@ -79,7 +79,7 @@
                       <button (click)="startGame(0)" mat-button class="btn btn-warning">Játék most</button>
                     </mat-card-actions>
                 </mat-card>
-                <mat-card class="bg-transparent">
+                <mat-card class="bg-success">
                     <mat-card-header>
                       <mat-card-title>Kiadott év-játék</mat-card-title>
                     </mat-card-header>
