--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -24,7 +24,7 @@
         </nav>
     </header>
     <main class="h-100 w-100">
-        <div class="mt-4 row text-center gap-3 p-3">
+        <div class="mt-4 row text-center gap-3 p-3 w-100">
             <div class="col-lg-4">
                 <h2>Felhasználó</h2>
                 <table class="table mt-5">
@@ -52,84 +52,101 @@
                         <th>LVL</th>
                         <td>{{user.userStatistics.lvl}}</td>
                     </tr>
-                    <a class="font-italic text-warning pe-auto pass-changer" (click)="ShowChangePassword()">Jelszó megváltoztatása</a>
+                    <tr>
+                        <td colspan="2">
+                            <a class="font-italic text-warning pe-auto pass-changer" (click)="ShowChangePassword()">Jelszó megváltoztatása</a>
+                        </td>
+                    </tr>
                 </table>
 
             </div>
             <div class="col-lg-4">
                 <h2>Játékok</h2>
-                <mat-card class="bg-success mb-3">
+                <mat-card *ngFor="let gm of gamemodes" class="bg-success mb-3">
                     <mat-card-header>
-                      <mat-card-title>Értékelő-játék</mat-card-title>
+                    <mat-card-title>{{ gm.name }}</mat-card-title>
                     </mat-card-header>
                     <mat-card-content>
-                        <p class="mat-card-description text-left">
-                            Az értékelő-játéknál két játékot fogsz látni. Meg kell határoznod,
-                            hogy a bal oldali játék vagy a jobb oldali játék kapott nagyobb értékelést 
-                            egy nyilvánosan elérhető fórumon a játékosoktól.
-                        </p>
-                        <p class="mat-card-description text-left">
-                            Sikeres eltaláláskor a második játék kerül az első helyére, és egy újabb feladványt kapsz, továbbá egy pontot és XP-t.
-                        </p>
-                        <p class="mat-card-description text-left">
-                            A játék célja, hogy minél többet eltalálj és te kerülj a ranglista élére!
-                        </p>
+                    <p *ngFor="let p of gm.paragraphs" class="mat-card-description text-left">
+                        {{ p }}
+                    </p>
                     </mat-card-content>
                     <mat-card-actions>
-                      <button (click)="startGame(0)" mat-button class="btn btn-warning">Játék most</button>
+                    <button mat-button (click)="startGame(gm.id)" class="btn btn-warning">Játék most</button>
                     </mat-card-actions>
                 </mat-card>
-                <mat-card class="bg-success">
-                    <mat-card-header>
-                      <mat-card-title>Kiadott év-játék</mat-card-title>
-                    </mat-card-header>
-                    <mat-card-content>
-                        <p class="mat-card-description text-left">
-                            A Kiadott év-játéknál két játékot fogsz látni. Meg kell határoznod,
-                            hogy a bal oldali játék vagy a jobb oldali játék jelent meg később.
-                        </p>
-                        <p class="mat-card-description text-left">
-                            Sikeres eltaláláskor a második játék kerül az első helyére, és egy újabb feladványt kapsz, továbbá egy pontot és XP-t.
-                        </p>
-                        <p class="mat-card-description text-left">
-                            A játék célja, hogy minél többet eltalálj és te kerülj a ranglista élére!
-                        </p>
-                    </mat-card-content>
-                    <mat-card-actions>
-                      <button (click)="startGame(1)" mat-button class="btn btn-warning">Játék most</button>
-                    </mat-card-actions>
-                </mat-card>
-            </div>
+            </div>     
             <div class="col-lg-4">
                 <h2>Ranglista</h2>
-                <mat-tab-group animationDuration="2000ms">
+                <mat-tab-group animationDuration="1000ms">
                     <mat-tab label="Értékelő-játék">
-                        <table>
-                            <tr>
-                                <td>asd</td>
-                                <td>asd</td>
-                            </tr>
-                            <tr>
-                                <td>asd</td>
-                                <td>asd</td>
-                            </tr>
-                            <tr>
-                                <td>asd</td>
-                                <td>asd</td>
-                            </tr>
-                            <tr>
-                                <td>asd</td>
-                                <td>asd</td>
-                            </tr>
-                            <tr>
-                                <td>asd</td>
-                                <td>asd</td>
-                            </tr>
+                        <table mat-table [dataSource]="bestRatingGamePlayers" class="mt-3 bg-dark">
+                            <ng-container matColumnDef="username">
+                              <th mat-header-cell *matHeaderCellDef><h4 class="text-danger text-center">Felhasználó</h4></th>
+                              <td mat-cell *matCellDef="let user"><h5 class="text-warning text-center">{{ user.username }}</h5></td>
+                            </ng-container>
+                          
+                            <ng-container matColumnDef="ratingGameTopScore">
+                              <th mat-header-cell *matHeaderCellDef><h4 class="text-danger text-center">Pontszám</h4></th>
+                              <td mat-cell *matCellDef="let user"><h5 class="text-warning text-center">{{ user.userStatistics.ratingGameTopScore }}</h5></td>
+                            </ng-container>
+                          
+                            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                            
                         </table>
                     </mat-tab>
-                    <mat-tab label="Kiadott év-játék">Kiadott év-játék</mat-tab>
-                    <mat-tab label="LVL">LVL</mat-tab>
-                    <mat-tab label="XP">XP</mat-tab>
+                    <mat-tab label="Kiadott év-játék">
+                        <table mat-table [dataSource]="bestReleasedGamePlayers" class="mt-3 bg-dark">
+                            <ng-container matColumnDef="username">
+                              <th mat-header-cell *matHeaderCellDef><h4 class="text-danger text-center">Felhasználó</h4></th>
+                              <td mat-cell *matCellDef="let user"><h5 class="text-warning text-center">{{ user.username }}</h5></td>
+                            </ng-container>
+                          
+                            <ng-container matColumnDef="ratingGameTopScore">
+                              <th mat-header-cell *matHeaderCellDef><h4 class="text-danger text-center">Pontszám</h4></th>
+                              <td mat-cell *matCellDef="let user"><h5 class="text-warning text-center">{{ user.userStatistics.releasedGameTopScore }}</h5></td>
+                            </ng-container>
+                          
+                            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                            
+                        </table>
+                    </mat-tab>
+                    <mat-tab label="LVL">
+                        <table mat-table [dataSource]="bestLvlPlayers" class="mt-3 bg-dark">
+                            <ng-container matColumnDef="username">
+                              <th mat-header-cell *matHeaderCellDef><h4 class="text-danger text-center">Felhasználó</h4></th>
+                              <td mat-cell *matCellDef="let user"><h5 class="text-warning text-center">{{ user.username }}</h5></td>
+                            </ng-container>
+                          
+                            <ng-container matColumnDef="ratingGameTopScore">
+                              <th mat-header-cell *matHeaderCellDef><h4 class="text-danger text-center">LVL</h4></th>
+                              <td mat-cell *matCellDef="let user"><h5 class="text-warning text-center">{{ user.userStatistics.lvl }}</h5></td>
+                            </ng-container>
+                          
+                            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                            
+                        </table>
+                    </mat-tab>
+                    <mat-tab label="XP">
+                        <table mat-table [dataSource]="bestXpPlayers" class="mt-3 bg-dark">
+                            <ng-container matColumnDef="username">
+                              <th mat-header-cell *matHeaderCellDef><h4 class="text-danger text-center">Felhasználó</h4></th>
+                              <td mat-cell *matCellDef="let user"><h5 class="text-warning text-center">{{ user.username }}</h5></td>
+                            </ng-container>
+                          
+                            <ng-container matColumnDef="ratingGameTopScore">
+                              <th mat-header-cell *matHeaderCellDef><h4 class="text-danger text-center">XP</h4></th>
+                              <td mat-cell *matCellDef="let user"><h5 class="text-warning text-center">{{ user.userStatistics.xp }}</h5></td>
+                            </ng-container>
+                          
+                            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                            
+                        </table>
+                    </mat-tab>
                 </mat-tab-group>
             </div>
         </div>
