--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -54,7 +54,19 @@
                     </tr>
                     <tr>
                         <td colspan="2">
-                            <a class="font-italic text-warning pe-auto pass-changer" (click)="ShowChangePassword()">Jelszó megváltoztatása</a>
+                            <form #changePasswordForm="ngForm" (ngSubmit)="OnChangePassword()" *ngIf="passwordCurrentlyChanging" class="mb-2">
+                                <div class="form-group">
+                                  <label for="currentPassword">Jelenlegi jelszó</label>
+                                  <input type="password" class="form-control" id="currentPassword" name="currentPassword" ngModel required>
+                                </div>
+                                <div class="form-group">
+                                  <label for="newPassword">Új jelszó</label>
+                                  <input type="password" class="form-control" id="newPassword" name="newPassword" ngModel required>
+                                </div>
+                                <button type="submit" class="btn btn-primary" [disabled]="!changePasswordForm.valid">Jelszó megváltoztatása</button>
+                            </form>
+                            <a class="font-italic text-warning pe-auto pass-changer" (click)="passwordCurrentlyChanging = true;" *ngIf="!passwordCurrentlyChanging">Jelszó megváltoztatása</a>
+                            <a class="font-italic text-warning pe-auto pass-changer" (click)="passwordCurrentlyChanging = false;" *ngIf="passwordCurrentlyChanging">Mégsem</a>
                         </td>
                     </tr>
                 </table>
