--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -10,13 +10,13 @@
             <div class="right-side d-flex justify-content-center align-items-center">
                 <div class="xp d-inline-block">
                     <h5 class="mb-0">{{user.userStatistics.xp}}/{{(user.userStatistics.lvl+1)*500}}</h5>
-                    <mat-progress-bar mode="determinate" value="{{user.userStatistics.xp/((user.userStatistics.lvl+1)*500)*100}}"></mat-progress-bar>
+                    <mat-progress-bar mode="determinate" value="{{(user.userStatistics.xp-user.userStatistics.lvl*500)/500*100}}"></mat-progress-bar>
                 </div>
                 <div class="lvl d-inline-block ml-4 p-2">
                     <h5 class="mb-0 lvl">LVL {{user.userStatistics.lvl}}</h5>
                 </div>
                 <div class="exit d-inline-block ml-4 mr-4">
-                    <a title="Kijelentkezés" (click)="logOut()">
+                    <a title="Kijelentkezés" (click)="LogOut()">
                         <mat-icon class="logout">exit_to_app</mat-icon>
                     </a>
                 </div>
@@ -25,7 +25,7 @@
     </header>
     <main class="h-100 w-100">
         <div class="mt-4 row text-center gap-3 p-3 w-100">
-            <div class="col-lg-4">
+            <div class="col-xl-6">
                 <h2>Felhasználó</h2>
                 <table class="table mt-5">
                     <tr>
@@ -54,45 +54,39 @@
                     </tr>
                     <tr>
                         <td colspan="2">
-                            <form #changePasswordForm="ngForm" (ngSubmit)="OnChangePassword()" *ngIf="passwordCurrentlyChanging" class="mb-2">
+                            <form [formGroup]="changePasswordForm" (ngSubmit)="OnChangePassword()" *ngIf="passwordCurrentlyChanging" class="mb-2">
                                 <div class="form-group">
                                   <label for="currentPassword">Jelenlegi jelszó</label>
-                                  <input type="password" class="form-control" id="currentPassword" name="currentPassword" ngModel required>
+                                  <input type="password" class="form-control" id="currentPassword" name="currentPassword" formControlName="currentPassword" required>
+                                  <p *ngIf="passwordChangeError && changePasswordForm.controls['currentPassword'].pristine"
+                                    class="text-danger mt-1">A megadott jelszó nem egyezik a jelenlegi jelszóval!</p>                         
                                 </div>
                                 <div class="form-group">
                                   <label for="newPassword">Új jelszó</label>
-                                  <input type="password" class="form-control" id="newPassword" name="newPassword" ngModel required>
+                                  <input type="password" class="form-control" id="newPassword" name="newPassword" formControlName="newPassword" required>
                                 </div>
                                 <button type="submit" class="btn btn-primary" [disabled]="!changePasswordForm.valid">Jelszó megváltoztatása</button>
                             </form>
-                            <a class="font-italic text-warning pe-auto pass-changer" (click)="passwordCurrentlyChanging = true;" *ngIf="!passwordCurrentlyChanging">Jelszó megváltoztatása</a>
-                            <a class="font-italic text-warning pe-auto pass-changer" (click)="passwordCurrentlyChanging = false;" *ngIf="passwordCurrentlyChanging">Mégsem</a>
+                            <a class="font-italic text-warning pe-auto pass-changer" (click)="passwordCurrentlyChanging = !passwordCurrentlyChanging;" 
+                                *ngIf="!passwordCurrentlyChanging && !passwordChanged">Jelszó megváltoztatása</a>
+                            <a class="font-italic text-warning pe-auto pass-changer" (click)="passwordCurrentlyChanging = !passwordCurrentlyChanging;" 
+                                *ngIf="passwordCurrentlyChanging && !passwordChanged">Mégsem</a>
+                            <h5 *ngIf="passwordChanged" class="text-success">Sikeres jelszóváltoztatás!</h5>
                         </td>
                     </tr>
                 </table>
 
             </div>
-            <div class="col-lg-4">
-                <h2>Játékok</h2>
-                <mat-card *ngFor="let gm of gamemodes" class="bg-success mb-3">
-                    <mat-card-header>
-                    <mat-card-title>{{ gm.name }}</mat-card-title>
-                    </mat-card-header>
-                    <mat-card-content>
-                    <p *ngFor="let p of gm.paragraphs" class="mat-card-description text-left">
-                        {{ p }}
-                    </p>
-                    </mat-card-content>
-                    <mat-card-actions>
-                    <button mat-button (click)="startGame(gm.id)" class="btn btn-warning">Játék most</button>
-                    </mat-card-actions>
-                </mat-card>
-            </div>     
-            <div class="col-lg-4">
+            <div class="col-xl-6">
                 <h2>Ranglista</h2>
                 <mat-tab-group animationDuration="1000ms">
                     <mat-tab label="Értékelő-játék">
                         <table mat-table [dataSource]="bestRatingGamePlayers" class="mt-3 bg-dark">
+                            <ng-container matColumnDef="iteration">
+                                <th mat-header-cell *matHeaderCellDef><h4 class="text-danger text-center">#</h4></th>
+                                <td mat-cell *matCellDef="let user; let i = index"><h5 class="text-warning text-center">{{ i + 1 }}.</h5></td>
+                            </ng-container>
+                              
                             <ng-container matColumnDef="username">
                               <th mat-header-cell *matHeaderCellDef><h4 class="text-danger text-center">Felhasználó</h4></th>
                               <td mat-cell *matCellDef="let user"><h5 class="text-warning text-center">{{ user.username }}</h5></td>
@@ -105,11 +99,15 @@
                           
                             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
                             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-                            
                         </table>
                     </mat-tab>
                     <mat-tab label="Kiadott év-játék">
                         <table mat-table [dataSource]="bestReleasedGamePlayers" class="mt-3 bg-dark">
+                             <ng-container matColumnDef="iteration">
+                                <th mat-header-cell *matHeaderCellDef><h4 class="text-danger text-center">#</h4></th>
+                                <td mat-cell *matCellDef="let user; let i = index"><h5 class="text-warning text-center">{{ i + 1 }}.</h5></td>
+                            </ng-container>
+
                             <ng-container matColumnDef="username">
                               <th mat-header-cell *matHeaderCellDef><h4 class="text-danger text-center">Felhasználó</h4></th>
                               <td mat-cell *matCellDef="let user"><h5 class="text-warning text-center">{{ user.username }}</h5></td>
@@ -122,11 +120,15 @@
                           
                             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
                             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-                            
                         </table>
                     </mat-tab>
                     <mat-tab label="LVL">
                         <table mat-table [dataSource]="bestLvlPlayers" class="mt-3 bg-dark">
+                             <ng-container matColumnDef="iteration">
+                                <th mat-header-cell *matHeaderCellDef><h4 class="text-danger text-center">#</h4></th>
+                                <td mat-cell *matCellDef="let user; let i = index"><h5 class="text-warning text-center">{{ i + 1 }}.</h5></td>
+                            </ng-container>
+
                             <ng-container matColumnDef="username">
                               <th mat-header-cell *matHeaderCellDef><h4 class="text-danger text-center">Felhasználó</h4></th>
                               <td mat-cell *matCellDef="let user"><h5 class="text-warning text-center">{{ user.username }}</h5></td>
@@ -139,11 +141,15 @@
                           
                             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
                             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-                            
                         </table>
                     </mat-tab>
                     <mat-tab label="XP">
                         <table mat-table [dataSource]="bestXpPlayers" class="mt-3 bg-dark">
+                             <ng-container matColumnDef="iteration">
+                                <th mat-header-cell *matHeaderCellDef><h4 class="text-danger text-center">#</h4></th>
+                                <td mat-cell *matCellDef="let user; let i = index"><h5 class="text-warning text-center">{{ i + 1 }}.</h5></td>
+                            </ng-container>
+
                             <ng-container matColumnDef="username">
                               <th mat-header-cell *matHeaderCellDef><h4 class="text-danger text-center">Felhasználó</h4></th>
                               <td mat-cell *matCellDef="let user"><h5 class="text-warning text-center">{{ user.username }}</h5></td>
@@ -155,12 +161,36 @@
                             </ng-container>
                           
                             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-                            
+                            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>   
                         </table>
                     </mat-tab>
                 </mat-tab-group>
             </div>
+        </div>
+        <div class="mt-4 row text-center gap-3 p-3 w-100">
+            <div class="col-xl-2"></div>
+            <div class="col-xl-8 col-md-12">
+                <h2>Játékok</h2>
+                <div class="row">
+                    <div class="col-xl-6" *ngFor="let gm of gamemodes">
+                      <mat-card class="bg-success mb-3 p-2">
+                        <mat-card-header>
+                          <mat-card-title>{{ gm.name }}</mat-card-title>
+                        </mat-card-header>
+                        <mat-card-content>
+                          <p *ngFor="let p of gm.paragraphs" class="mat-card-description text-left">
+                            {{ p }}
+                          </p>
+                        </mat-card-content>
+                        <mat-card-actions>
+                            <button mat-button (click)="StartGame(gm.id)" class="btn btn-warning" 
+                            [disabled]="!gm.playable" [title]="gm.playable ? '' : 'A játék jelenleg nem elérhető.'">Játék most</button>
+                        </mat-card-actions>
+                      </mat-card>
+                    </div>
+                </div>                  
+            </div>
+            <div class="col-xl-2"></div>
         </div>
     </main>
 </div>
