--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -29,6 +29,12 @@ form{
     -moz-box-shadow: 0px 0px 20px 10px cyan;
 }
 
+.error-message{
+    max-width: 250px;
+    white-space: none;
+    display: block;
+}
+
 @media(min-width: 1024px)
 {
     h1{
